--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <!-- CORE CSS TEMPLATE - START -->
 
   
-    <link href="https://alibhtty.github.io/upay/assets/css/style.css" type="text/css" rel="stylesheet" media="screen" id="main-style" />
+    <link href="/assets/css/style.css" type="text/css" rel="stylesheet" media="screen" id="main-style" />
   <!-- CORE CSS TEMPLATE - END -->
 
   
@@ -102,7 +102,7 @@
 <!--  SIDEBAR - END -->
 
 <!-- START navigation -->
-<!-- <nav class="fix_topscroll logo_on_fixed  topbar navigation">
+<nav class="fix_topscroll logo_on_fixed  topbar navigation">
   <div class="nav-wrapper container">
     <a id="logo-container" href="index.html" class=" brand-logo " ><svg xmlns="http://www.w3.org/2000/svg" width="400.000000pt" height="400.000000pt" viewBox="0 0 400.000000 400.000000" preserveAspectRatio="xMidYMid meet">
 <g transform="translate(0.000000,400.000000) scale(0.100000,-0.100000)" fill="#000000" stroke="none">
@@ -122,9 +122,9 @@
     <a href="ui-pages-home.html#" data-target="slide-settings" class="waves-effect waves-circle navicon right sidenav-trigger show-on-large"><i class="app-icon-equalizer2"></i></a>
 
     <a href="ui-pages-home.html#" data-target="" class="waves-effect waves-circle navicon right nav-site-mode show-on-large"><i class="app-icon-brightness-contrast"></i></a>
-    <!-- <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a> ->
+    <!-- <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a> -->
   </div>
-</nav> -->
+</nav>
 
 <ul id="slide-nav" class="sidenav sidemenu">
   <li class="user-wrap">
