--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <!-- CORE CSS TEMPLATE - START -->
 
   
-    <link href="/assets/css/style.css" type="text/css" rel="stylesheet" media="screen" id="main-style" />
+    <link href="https://alibhtty.github.io/upay/assets/css/style.css" type="text/css" rel="stylesheet" media="screen" id="main-style" />
   <!-- CORE CSS TEMPLATE - END -->
 
   
@@ -1368,12 +1368,12 @@
 <script src="/modules/app/init.js"></script>
 <script src="/modules/app/settings.js"></script>
 
-<script src="https://alibhtty.github.io/upay/modules/app/scripts.js"></script>
+<script src="/modules/app/scripts.js"></script>
 
 <!-- END CORE TEMPLATE JS - END -->
 
 
-<script src="https://alibhtty.github.io/upay/assets/js/preloader.js"></script>
+<script src="/assets/js/preloader.js"></script>
 </body>
 
 </html>
