--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
 
 
   <!-- CORE CSS FRAMEWORK - START -->
-  <link href="assets/css/preloader.css" type="text/css" rel="stylesheet" media="screen" />
+  <link href="/assets/css/preloader.css" type="text/css" rel="stylesheet" media="screen" />
 
-  <link href="modules/materialize/materialize.min.css" type="text/css" rel="stylesheet" media="screen" />
-  <link href="modules/fonts/mdi/appicon/appicon.css" type="text/css" rel="stylesheet" media="screen" />
-  <link href="modules/fonts/mdi/materialdesignicons.min.css" type="text/css" rel="stylesheet" media="screen" />
+  <link href="/modules/materialize/materialize.min.css" type="text/css" rel="stylesheet" media="screen" />
+  <link href="/modules/fonts/mdi/appicon/appicon.css" type="text/css" rel="stylesheet" media="screen" />
+  <link href="/modules/fonts/mdi/materialdesignicons.min.css" type="text/css" rel="stylesheet" media="screen" />
   <script src="https://code.iconify.design/iconify-icon/1.0.1/iconify-icon.min.js"></script>
-  <link href="modules/perfect-scrollbar/perfect-scrollbar.css" type="text/css" rel="stylesheet" media="screen" />
+  <link href="/modules/perfect-scrollbar/perfect-scrollbar.css" type="text/css" rel="stylesheet" media="screen" />
 
 
   <!-- CORE CSS FRAMEWORK - END -->
@@ -58,7 +58,7 @@
   <!-- CORE CSS TEMPLATE - START -->
 
   
-    <link href="https://alibhtty.github.io/upay/assets/css/style.css" type="text/css" rel="stylesheet" media="screen" id="main-style" />
+    <link href="/assets/css/style.css" type="text/css" rel="stylesheet" media="screen" id="main-style" />
   <!-- CORE CSS TEMPLATE - END -->
 
   
