--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 
   
     <link href="/assets/css/style.css" type="text/css" rel="stylesheet" media="screen" id="main-style" />
+    <link href="https://alibhtty.github.io/upay/assets/css/style.css" type="text/css" rel="stylesheet" media="screen" id="main-style" />
   <!-- CORE CSS TEMPLATE - END -->
 
   
