--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>EasyPay</title>
-  <meta content="Odis Mobile App" name="description" />
-  <meta content="themepassion" name="author" />
+  <meta content="EasyPay Mobile App" name="description" />
+  <meta content="" name="author" />
 
 
   <!-- App Icons -->
@@ -30,7 +30,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="assets/images/icons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="96x96" href="assets/images/icons/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="assets/images/icons/favicon-16x16.png">
-  <link rel="manifest" href="assets/images/icons/manifest.json">
+  <link rel="manifest" href="./assets/images/icons/manifest.json">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="assets/images/icons/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
@@ -41,24 +41,24 @@
 
 
   <!-- CORE CSS FRAMEWORK - START -->
-  <link href="/assets/css/preloader.css" type="text/css" rel="stylesheet" media="screen" />
+  <link href="./assets/css/preloader.css" type="text/css" rel="stylesheet" media="screen" />
 
-  <link href="/modules/materialize/materialize.min.css" type="text/css" rel="stylesheet" media="screen" />
-  <link href="/modules/fonts/mdi/appicon/appicon.css" type="text/css" rel="stylesheet" media="screen" />
-  <link href="/modules/fonts/mdi/materialdesignicons.min.css" type="text/css" rel="stylesheet" media="screen" />
+  <link href="./modules/materialize/materialize.min.css" type="text/css" rel="stylesheet" media="screen" />
+  <link href="./modules/fonts/mdi/appicon/appicon.css" type="text/css" rel="stylesheet" media="screen" />
+  <link href="./modules/fonts/mdi/materialdesignicons.min.css" type="text/css" rel="stylesheet" media="screen" />
   <script src="https://code.iconify.design/iconify-icon/1.0.1/iconify-icon.min.js"></script>
-  <link href="/modules/perfect-scrollbar/perfect-scrollbar.css" type="text/css" rel="stylesheet" media="screen" />
+  <link href="./modules/perfect-scrollbar/perfect-scrollbar.css" type="text/css" rel="stylesheet" media="screen" />
 
 
   <!-- CORE CSS FRAMEWORK - END -->
 
   <!-- OTHER SCRIPTS INCLUDED ON THIS PAGE - START -->
-  <link href="/modules/fancybox/jquery.fancybox.min.css" rel="stylesheet" type="text/css" media="screen"/>  <!-- OTHER SCRIPTS INCLUDED ON THIS PAGE - END -->
+  <link href="./modules/fancybox/jquery.fancybox.min.css" rel="stylesheet" type="text/css" media="screen"/>  <!-- OTHER SCRIPTS INCLUDED ON THIS PAGE - END -->
 
   <!-- CORE CSS TEMPLATE - START -->
 
   
-    <link href="/assets/css/style.css" type="text/css" rel="stylesheet" media="screen" id="main-style" />
+    <link href="./assets/css/style.css" type="text/css" rel="stylesheet" media="screen" id="main-style" />
     <link href="https://alibhtty.github.io/upay/assets/css/style.css" type="text/css" rel="stylesheet" media="screen" id="main-style" />
   <!-- CORE CSS TEMPLATE - END -->
 
@@ -113,7 +113,7 @@
 <path d="M1226 3093 c-4 -9 -16 -62 -26 -118 -19 -94 -20 -148 -20 -971 0 -819 1 -876 19 -975 39 -208 90 -318 197 -425 76 -77 164 -127 279 -159 79 -22 361 -32 448 -16 79 15 167 42 167 51 0 3 -22 16 -48 28 -26 12 -71 41 -99 65 l-51 44 -64 -9 c-34 -5 -103 -6 -153 -3 -258 19 -391 134 -451 390 -18 75 -19 134 -19 995 0 503 3 931 6 950 6 33 5 36 -34 54 -22 11 -63 41 -91 68 -27 26 -51 48 -52 48 -1 0 -5 -8 -8 -17z"/>
 <path d="M2356 1304 c-27 -9 -61 -23 -75 -31 -53 -33 -123 -110 -149 -163 -24 -48 -27 -67 -27 -155 0 -87 3 -107 26 -155 103 -215 370 -276 563 -129 86 66 136 170 136 284 0 98 -27 170 -90 238 -101 111 -246 153 -384 111z"/>
 </g>
-</svg>Odis</a>    
+</svg>EasyPay</a>    
       
       <a href="ui-pages-home.html#" data-target="" class="waves-effect waves-circle navicon back-button htmlmode show-on-large "><i class="mdi mdi-chevron-left" data-page=""></i></a>
     
@@ -135,7 +135,7 @@
         <a href="ui-pages-home.html#user" class="status available"><img class="circle" src="assets/images/menu-user.jpg" alt="menu user"></a>
       </div>
             <div class="col s9 infoarea">
-        <a href="ui-app-profile.html"><span class="name">Emma Bailey</span></a>
+        <a href="ui-app-profile.html"><span class="name">Kazafy B.</span></a>
         <a href="ui-app-profile.html"><span class="email">emma.bailey@gmail.com</span></a>
       </div>
     </div>
@@ -1342,39 +1342,39 @@
 </div><!--.content-area-->
 
 
-<script src="/assets/js/pwa.js"></script>
+<script src="./assets/js/pwa.js"></script>
 
 <!-- LOAD FILES AT PAGE END FOR FASTER LOADING -->
 
 <!-- CORE JS FRAMEWORK - START -->
-<script src="/modules/jquery/jquery-2.2.4.min.js"></script>
-<script src="/modules/materialize/materialize.js"></script>
-<script src="/modules/perfect-scrollbar/perfect-scrollbar.min.js"></script>
-<script src="/assets/js/variables.js"></script>
+<script src="./modules/jquery/jquery-2.2.4.min.js"></script>
+<script src="./modules/materialize/materialize.js"></script>
+<script src="./modules/perfect-scrollbar/perfect-scrollbar.min.js"></script>
+<script src="./assets/js/variables.js"></script>
 <!-- CORE JS FRAMEWORK - END -->
 
 
 <!-- OTHER SCRIPTS INCLUDED ON THIS PAGE - START -->
-<script src="/modules/fancybox/jquery.fancybox.min.js" ></script><script src="assets/js/common.js"></script>
+<script src="./modules/fancybox/jquery.fancybox.min.js" ></script><script src="assets/js/common.js"></script>
 <!-- OTHER SCRIPTS INCLUDED ON THIS PAGE - END -->
 
 <!-- OTHER SCRIPTS INCLUDED ON THIS PAGE - START -->
 <!-- <script src="modules/echarts/echarts.min.js" ></script> -->
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script src="/modules/echarts/mychart.js" ></script>
-<script src="/assets/js/common.js"></script>
+<script src="./modules/echarts/mychart.js" ></script>
+<script src="./assets/js/common.js"></script>
 <!-- OTHER SCRIPTS INCLUDED ON THIS PAGE - END -->
 
 <!-- CORE TEMPLATE JS - START -->
-<script src="/modules/app/init.js"></script>
-<script src="/modules/app/settings.js"></script>
+<script src="./modules/app/init.js"></script>
+<script src="./modules/app/settings.js"></script>
 
-<script src="/modules/app/scripts.js"></script>
+<script src="./modules/app/scripts.js"></script>
 
 <!-- END CORE TEMPLATE JS - END -->
 
 
-<script src="/assets/js/preloader.js"></script>
+<script src="./assets/js/preloader.js"></script>
 </body>
 
 </html>
