--- a/index.html
+++ b/index.html
@@ -1370,7 +1370,8 @@
 </div><!--.content-area-->
 
 
-<script src="./assets/js/pwa.js"></script>
+<!-- <script src="./assets/js/pwa.js"></script> -->
+<script src="./assets/js/pwabuilder-sw.js"></script>
 
 <!-- LOAD FILES AT PAGE END FOR FASTER LOADING -->
 
