--- a/index.html
+++ b/index.html
@@ -16,7 +16,16 @@
 
 
   <!-- App Icons -->
-  <link rel="apple-touch-icon" sizes="57x57" href="assets/images/icons/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="https://ali-bhtty.web.app/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://ali-bhtty.web.app/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="https://ali-bhtty.web.app/favicon/favicon-16x16.png">
+  <link rel="mask-icon" href="https://ali-bhtty.web.app/favicon/safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="shortcut icon" type="image/x-icon" href="https://ali-bhtty.web.app/favicon/favicon.svg">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#000000">
+  <meta name="msapplication-config" content="https://ali-bhtty.web.app/favicon/browserconfig.xml">
+
+  <!-- <link rel="apple-touch-icon" sizes="57x57" href="assets/images/icons/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="assets/images/icons/apple-icon-60x60.png">
   <link rel="apple-touch-icon" sizes="72x72" href="assets/images/icons/apple-icon-72x72.png">
   <link rel="apple-touch-icon" sizes="76x76" href="assets/images/icons/apple-icon-76x76.png">
@@ -33,7 +42,7 @@
   <link rel="manifest" href="./assets/images/icons/manifest.json">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="assets/images/icons/ms-icon-144x144.png">
-  <meta name="theme-color" content="#ffffff">
+  <meta name="theme-color" content="#ffffff"> -->
 
 
 
